5.0.5
Add new option (exitedContainers) on Flush-ContainerHelperCache. Note that exited containers are NOT remove by the all flag, you need all,exitedContainers
Add resilience to Remove-BcContainerSession

5.0.4
Add new parameter -excludeRuntimePackages to Publish-BcContainerApp, to exclude installation of runtime packages
Issue #3061 Remove-BcEnvironment without doNotWait stopped working
Align naming of all SaaS functions. Get-BcEnvironmentUpdateWindow, Get-BcEnvironmentScheduledUpgrade, Get-BcEnvironmentUsedStorage,... (added Alias' for all former names)
Issue #3071 Restart-BCContainer with renewBindings fails because container is not running
Add functions for supporting Alpaca Containers
Issue #3089 Regression: Cannot find path 'C:\Windows\SysWow64\NavSip.dll' because it does not exist.
Issue #3087 Enter-BCContainer on PowerShell 7 doesn't seem to work
Add parameters `PreCompileApp` and `PostCompileApp` to `Run-AlPipeline` to allow running custom scripts before and after compiling an app.
Add parameter `EnableExternalRulesets` to compile functions to support new alc feature.
Issue #3099 Compile-AppWithBcCompilerFolder: The variable '$platformversion' cannot be retrieved because it has not been set. 
Flush-ContainerHelperCache will now also run docker image prune with a filter until=xxh (based on keepdays)
Add 4 new parameters to Compile-AppInBcContainer and Compile-AppWithBcCompilerFolder: SourceRepositoryUrl, SourceCommit, BuildBy and BuildUrl. The value of these parameters will be stamped into the app manifest.
Performance Tests doesn't run due to wrong version of Microsoft.IdentityModel.Clients.ActiveDirectory.dll in the Applications\testframework\TestRunner\Internal folder
Add 4 new parameters to Run-AlPipeline: SourceRepositoryUrl, SourceCommit, BuildBy and BuildUrl. The value of these parameters will be stamped into the app manifest during compile.

5.0.3
Issue #3051 Unable to import .rapidstart file - The property 'Code' cannot be found on this object